// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`options merge > merge case 0 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 1 1`] = `
{
  "button": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 2 1`] = `
{
  "button": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 3 1`] = `
{
  "button": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 4 1`] = `
{
  "button": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 5 1`] = `
{
  "button": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 6 1`] = `
{
  "button": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 7 1`] = `
{
  "button": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 8 1`] = `
{
  "button": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 9 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 10 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 11 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 12 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 13 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 14 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 15 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`options merge > merge case 16 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;
